--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </section>
         </div>
     </section>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 <footer>
     <div class="footer_info">
